; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl_shader_driver_set_backend.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl_shader_driver_set_backend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [70 x i8] c"[Shader driver]: Shader backend %d not supported, falling back to %d.\00", align 1
@.str.1 = private unnamed_addr constant [47 x i8] c"[Shader driver]: No supported shader backend.\0A\00", align 1
@gl_cg_backend = common dso_local global i32 0, align 4
@gl_glsl_backend = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @gl_shader_driver_set_backend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @gl_shader_driver_set_backend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @gl2_get_fallback_shader_type(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i32, i32* %3, align 4
  switch i32 %14, label %15 [
  ]

15:                                               ; preds = %13
  %16 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0))
  ret i32* null
}

declare dso_local i32 @gl2_get_fallback_shader_type(i32) #1

declare dso_local i32 @RARCH_ERR(i8*, i32, i32) #1

declare dso_local i32 @RARCH_LOG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
